{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 85,
  "lineage": "cc551eef-8bd7-4539-5850-43c2b91ff0a4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-nic-1",
            "internal_domain_name_suffix": "fasn5fssbxwe3hpnttlbco3tvh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip-1",
                "subnet_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-9B-FD-A2",
            "name": "mtc-nic-1",
            "private_ip_address": "10.123.1.5",
            "private_ip_addresses": [
              "10.123.1.5"
            ],
            "resource_group_name": "mtc-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm-1"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-nic-2",
            "internal_domain_name_suffix": "fasn5fssbxwe3hpnttlbco3tvh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip-2",
                "subnet_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-9B-F0-4D",
            "name": "mtc-nic-2",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm-2"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "westeurope",
            "name": "mtc-sg",
            "resource_group_name": "mtc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule-icmp",
                "priority": 110,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule-icmp",
            "name": "mtc-dev-rule-icmp",
            "network_security_group_name": "mtc-sg",
            "priority": 110,
            "protocol": "Icmp",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule-icmp-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule-icmp-outbound",
            "name": "mtc-dev-rule-icmp-outbound",
            "network_security_group_name": "mtc-sg",
            "priority": 130,
            "protocol": "Icmp",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule-outbound",
            "name": "mtc-dev-rule-outbound",
            "network_security_group_name": "mtc-sg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule-ssh",
            "name": "mtc-dev-rule-ssh",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.154.179",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mtc-ip-1",
            "resource_group_name": "mtc-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.154.88",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mtc-ip-2",
            "resource_group_name": "mtc-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "resource_group_name": "mtc-resources",
            "timeouts": {
            },
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "96df2428-0d52-4eec-9ded-9cd6113bb3af",
            "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "westeurope",
            "name": "mtc-network",
            "resource_group_name": "mtc-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "security_group": "/subscriptions/d4317845-9f95-4975-9c9b-30f98ef0b1b2/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}